--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
         </a>
 
 
-            <label id="switch">
-                <button id="alternar-tema"></button>
-                <div id="bola"></div>
-                <i id="sol" class="fa-solid fa-sun"></i>
-                <i id="lua" class="fa-solid fa-moon"></i>
+            <label class="switch">
+                <button class="alternar-tema"></button>
+                <div class="bola"></div>
+                <i class="fa-solid fa-sun sois"></i>
+                <i class="fa-solid fa-moon luas"></i>
             </label>
     </nav>
 
 
-    <header  id="inicio">
-        <a href="index.html"><img src="imgs/minhaFoto.png" id="icone"></a>
-        <a href="index.html"><h1>NÍCOLAS CHAGAS</h1></a>
-
+    <header id="inicio">
+        <img src="imgs/minhaFoto.png" id="icone">
+        <h1>NÍCOLAS CHAGAS</h1>
+        <label id="switch-mobile" class="switch">
+            <button class="alternar-tema"></button>
+            <div class="bola"></div>
+            <i class="fa-solid fa-sun sois"></i>
+            <i class="fa-solid fa-moon luas"></i>
+        </label>
     </header>
 
 
@@ -56,7 +61,6 @@
                 <li>Sobre a página: uma sessão dedicada a expor detalhes sobre a construção do site, uso de js, e outros recursos</li>
             </ul>
             <h2 id="sobre-mim">Sobre mim</h2>
-            <img src="imgs/cefet-campus-II.png" alt="Uma bela foto do Campus II." class="imgsLaterais">
             <P>
                 Olá! Meu nome é Nícolas e tenho 16 anos.
                 Sempre tive interesse em áreas como Matemática e Informática.
@@ -67,7 +71,8 @@
                  Fora do ambiente acadêmico você pode me encontrar ouvindo música,
                  em especial rock, e tocando guitarra. 
             </P>
-            <h3>Por que quer fazer parte?</h3>
+            <img src="imgs/outraFotoMinha.png" alt="Uma foto minha sorridente." class="imgsLaterais">
+            <h3>Por que quero fazer parte?</h3>
             <p>
                 Vejo no projeto uma oportunidade de ganhar experiência com a
                  dinâmica de um time que visa implementar e fazer manutenção
@@ -91,23 +96,32 @@
             <h2 id="sobre-a-pagina">Sobre a página</h2>
                 <h3>Temas</h3>
                 <p>
-                    A página conta com um switch que aplica individualmente um
-                    tema claro ou escuro para cada determinado elemento, Assim 
-                    como faz o uso da API matchMedia() para detectar o tema padrão
-                    do usuário. 
+                    A página conta com um switch que, através de um função de JS, aplica
+                     individualmente um tema claro ou escuro para cada determinado
+                      elemento, Assim como faz o uso da API matchMedia() para detectar o
+                       tema padrão do usuário e aplicar por JS.
                 </p>
                 <h3>Ícones</h3>
                 <p>
                     Os ícones <i class="fa-solid fa-house icones"></i>, <i class="fa-solid fa-user icones"></i>, <i class="fa-solid fa-computer icones"></i>,
                     usei do site Fontawesome, e podem ser manipulados como uma fonte por CSS.
                 </p>
+                <h3>Responsividade</h3>
+                <p>
+                    As medidas no site são relativas e fiz o uso de media queries para adaptá-lo
+                    para todos os tamanho de tela. O menu lateral e o layout são adaptados para
+                    melhor visibilidade em dispositivos móveis. Além disso, o tamanho dos elementos
+                    e fontes são adaptados para cada resolução. Dessa forma, a experiência mobile
+                    é tão boa quanto a por um computador!
+                </p>
         </main>
 
 
         <footer>
             <div>
-            <h3>Atribuição de Papéis de Parede</h3>
+            <h3>Atribuição de Imagens</h3>
                 <li><a href="https://pt.vecteezy.com/vetor-gratis/circuito">Circuito Vetores por Vecteezy</a></li>
+                <li>Foto do Campus II: Júlio Sardinha/CDCOA/</li>
                 <li><a href="https://deepai.org/machine-learning-model/torch-srgan">Super Resolution (usado para aumentar a resolução do fundo)</a></li>
             </div>
             <div>
