--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nícolas Chagas - Página Inicial</title>
+    <title>Nícolas Chagas</title>
     <link rel="shortcut icon" href="imgs/minhaFoto.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/8efa1554ba.js" crossorigin="anonymous"></script>
