--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nícolas Chagas</title>
+    <title>Informática</title>
     <link rel="shortcut icon" href="imgs/minhaFoto.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/8efa1554ba.js" crossorigin="anonymous"></script>
@@ -17,11 +17,11 @@
             <label>Início</label>
         </a>
         <a class="links-nav" href="#sobre-mim">
-            <i class="fa-solid fa-user icones"></i>
-            <label>Sobre mim</label>
+            <i class="fa-solid fa-computer icones"></i>
+            <label>O Curso</label>
         </a>
         <a class="links-nav" href="#sobre-a-pagina">
-            <i class="fa-solid fa-computer icones"></i>
+            <i class="fa-solid fa-magnifying-glass icones"></i>
             <label>Sobre a página</label>
         </a>
 
@@ -36,8 +36,8 @@
 
 
     <header id="inicio">
-        <img src="imgs/minhaFoto.png" id="icone">
-        <h1>NÍCOLAS CHAGAS</h1>
+        <img src="imgs/minhaFotoTemaClaro.png" id="icone">
+        <h1>INFORMÁTICA</h1>
         <label id="switch-mobile" class="switch">
             <button class="alternar-tema"></button>
             <div class="bola"></div>
@@ -52,49 +52,45 @@
             <img src="imgs/cefet-campus-II.png" alt="Uma bela foto do Campus II." class="imgsLaterais">
             <p>
                 Bem vindo! Meu nome é Nícolas Chagas, aluno do Cefet-MG. 
-                Construí este site visando me apresentar para a vaga do projeto de extensão "Desenvolvimento de um Sistema para Gestão de Propriedade Intelectual para Instituições de Ciência e Tecnologia". 
+                Construí este site visando me apresentar para uma vaga para um projeto de extensão usando o que eu aprendi no Curso de Informática do Cefet-MG. 
                 Nele, constam as seguintes seções que podem ser acessadas pelo menu lateral:
             </p>
             <ul>
                 <li>Início, onde é feita uma breve introdução;</li>
-                <li>Sobre mim: que contém uma apresentação pessoal mais detalhada, descrevendo minhas atividades atuais e os motivos pelos tenho interesse em fazer parte do projeto, além de um breve historico acadêmico;</li>
-                <li>Sobre a página: uma sessão dedicada a expor detalhes sobre a construção do site, uso de js, e outros recursos</li>
+                <li>O curso: que contém uma apresentação do curso mais detalhada, descrevendo nossas atividades atuais;</li>
+                <li>Sobre a página: uma sessão dedicada a expor detalhes sobre a construção do site, uso de js, e outros recursos.</li>
             </ul>
-            <h2 id="sobre-mim">Sobre mim</h2>
-            <P>
-                Olá! Meu nome é Nícolas e tenho 16 anos.
-                Sempre tive interesse em áreas como Matemática e Informática.
-                 Participei de olimpíadas nas duas áreas (como a Canguru e
-                 a OBI) e conquistei algumas medalhas de matemática. 
-                 Já fiz curso de robótica com legos e gostava de usar Scratch2, o que me 
-                 ajudou a compreender melhor lógica de programação.
-                 Fora do ambiente acadêmico você pode me encontrar ouvindo música,
-                 em especial rock, e tocando guitarra. 
-            </P>
-            <img src="imgs/outraFotoMinha.png" alt="Uma foto minha sorridente." class="imgsLaterais">
-            <h3>Por que quero fazer parte?</h3>
-            <p>
-                Vejo no projeto uma oportunidade de ganhar experiência com a
-                 dinâmica de um time que visa implementar e fazer manutenção
-                  evolutiva de um sistema de gestão de propriedade
-                   intelectual. Além de aprender Python, uma linguagem de
-                    sólida relevância em projetos de back-end e que seria
-                     fundamental para meu desenvolvimento profissional.  
-                     Participando ativamente do projeto, eu poderia 
-                     desenvolver minhas habilidades técnicas, aprender com 
-                     orientadores e colegas mais experientes e ganhar 
-                     experiência colaborando com um time, sendo assim, 
-                     considero que ingressar seria uma excelente oportunidade
-                      e por isso me candidatei.
-            </p>
-            <h3>Dados pessoais</h3>
+            <h2 id="sobre-mim">O Curso</h2>
+            <img src="imgs/frame.png" class="imgsLaterais">
+            <h3>Primeiro ano:</h3>
             <ul>
-                <li>Nome completo: Nícolas Francisco Martins Chagas;</li>
-                <li>Contato: nicolaschagas5588@gmail.com;</li>
-                <li>Curso: 2º ano de Informática;</li>
+                <li>Lógica de programação com C;</li>
+                <li>Fundamentos de Hardware e formatação;</li>
+                <li>Lógica de programação para web;</li>
+                <li>Projeto principal: site(s) estático e/ou com JS.</li>
             </ul>
+            <h3>Segundo ano:</h3>
+            <ul>
+                <li>Php server;</li>
+                <li>Java desktop e para web;</li>
+                <li>Sistemas digitais e circuitos lógicos;</li>
+                <li>Projeto principal: Sistema completo de gestão.</li>
+            </ul>
+            <h3>Terceiro ano:</h3>
+            <ul>
+                <li>Empreendedorismo;</li>
+                <li>Estoque;</li>
+                <li>TCC.</li>
+            </ul>
+            </p>
             <h2 id="sobre-a-pagina">Sobre a página</h2>
-                <h3>Temas</h3>
+            <img src="imgs\Captura de tela 2024-08-27 094324.png" class="imgsLaterais">
+            <p>
+                Já no primeiro ano, são intrudozidos recursos de desenvolvimento web como HTML5, CSS e JS, com os quais esta página foi construída.
+                 Você será capaz de criar sites estáticos e também usando JavaScript. A seguir está um detalhamento sobre 
+                 alguns recursos utilizados no site. 
+            </p>
+                <h3>Temas dinâmicos</h3>
                 <p>
                     A página conta com um switch que, através de um função de JS, aplica
                      individualmente um tema claro ou escuro para cada determinado
@@ -103,7 +99,7 @@
                 </p>
                 <h3>Ícones</h3>
                 <p>
-                    Os ícones <i class="fa-solid fa-house icones"></i>, <i class="fa-solid fa-user icones"></i>, <i class="fa-solid fa-computer icones"></i>,
+                    Os ícones <i class="fa-solid fa-house icones"></i>, <i class="fa-solid fa-magnifying-glass icones"></i>, <i class="fa-solid fa-computer icones"></i>,
                     usei do site Fontawesome, e podem ser manipulados como uma fonte por CSS.
                 </p>
                 <h3>Responsividade</h3>
