--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -126,5 +127,45 @@
             </div>
         </footer>
         <script src="meuJs.js"></script>
+</body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de Desejos do Nico</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+        }
+        img {
+            width: 50vw;
+        }
+        a {
+            margin-left: 25vw;
+        }
+        a :hover {
+            margin-top: -5px;
+            margin-left: -5px;
+        }
+        p {
+            margin-left: 25vw;
+        }
+    </style>
+</head>
+<body>
+    <h1>Lista de desejos do Nícolas</h1>
+    <h2>Opção 1: HeadSet</h2>
+    <p>(94 reais na Amazon)</p>
+    <p>Pode ser outro headset, mas quero <br> um compatível com computador</p>
+    <a href="https://www.amazon.com.br/Ouvido-Headset-Compat%C3%ADvel-Computador-Celular/dp/B0DBB7YR21/ref=sr_1_35?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=302G3DF5H4QS2&dib=eyJ2IjoiMSJ9.yJuewNbDtR0Pbk-GrmZNOHTie8x9VPVMMUXME4lLPGWAV-UzN4SiHeYmxxWmRw5BBRZ1fezZSGNnRlrB-5ksfyXfs0-JckQGRQficgQNKOuZGRK7QFc4BNJZiL6ELIC0EMZFHGW4HMA0XjmC2gCPuvyJpDYg0_S-2pmN0_n5a5blGPcAbDhavD2VCmHHhy1PnVCsP0PYkdH6ilwJGB8xZ0MvybaWIdZaVTrPu3Fy3UhEnQEGCLEhgrQ8KVdVr6DIHjISQhh4AwjhtzzMgSAoH1JkU7AWrONf5ssz06a76cE.7w8oEsgYDfGSkY8pp3eForrC5tLXkfeO5wmK6Wcnhgg&dib_tag=se&keywords=headset&qid=1732754199&refinements=p_36%3A9000-27500&rnid=16254006011&sprefix=headset%2Caps%2C623&sr=8-35&ufe=app_do%3Aamzn1.fos.6d798eae-cadf-45de-946a-f477d47705b9"><img src="https://m.media-amazon.com/images/I/61hj6TZ6FwL._AC_SY450_.jpg" alt="Headset com fio para computador"></a>
+    <a href="https://www.amazon.com.br/Ouvido-Headset-Compat%C3%ADvel-Computador-Celular/dp/B0DBB7YR21/ref=sr_1_35?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=302G3DF5H4QS2&dib=eyJ2IjoiMSJ9.yJuewNbDtR0Pbk-GrmZNOHTie8x9VPVMMUXME4lLPGWAV-UzN4SiHeYmxxWmRw5BBRZ1fezZSGNnRlrB-5ksfyXfs0-JckQGRQficgQNKOuZGRK7QFc4BNJZiL6ELIC0EMZFHGW4HMA0XjmC2gCPuvyJpDYg0_S-2pmN0_n5a5blGPcAbDhavD2VCmHHhy1PnVCsP0PYkdH6ilwJGB8xZ0MvybaWIdZaVTrPu3Fy3UhEnQEGCLEhgrQ8KVdVr6DIHjISQhh4AwjhtzzMgSAoH1JkU7AWrONf5ssz06a76cE.7w8oEsgYDfGSkY8pp3eForrC5tLXkfeO5wmK6Wcnhgg&dib_tag=se&keywords=headset&qid=1732754199&refinements=p_36%3A9000-27500&rnid=16254006011&sprefix=headset%2Caps%2C623&sr=8-35&ufe=app_do%3Aamzn1.fos.6d798eae-cadf-45de-946a-f477d47705b9">Link do HeadSet</a>
+    <h2>Opcão 2: Camisa da Nike</h2>
+    <p>(75 reais na Nike)</p>
+        <a href="https://www.nike.com.br/camiseta-nike-sb-masculina-010895.html?cor=53"><img id="c1" src="https://imgnike-a.akamaihd.net/768x768/01089553A1.jpg" alt="camisa nike"></a>
+        <a href="https://www.nike.com.br/camiseta-nike-sb-masculina-010895.html?cor=53">Link da Camisa</a>
 </body>
 </html>
