--- a/bijetiva/bijetiva.html
+++ b/bijetiva/bijetiva.html
@@ -36,6 +36,9 @@
         <label for="cipherTextC">🔣Texto cifrado</label>
         <input id="cipherTextC" type="text" disabled onkeyup="executeC()">
 
+        <p>
+            F(A) = A + <input type="number" id="chave" disabled>
+        </p>
         <!--button type="button" onclick="executeC()">Executar</button-->
     </form>
     <div class="container">
