--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informática</title>
-    <link rel="shortcut icon" href="imgs/minhaFoto.png" type="image/png">
+    <title>Nícolas Chagas - Portifólio</title>
+    <link rel="shortcut icon" href="imgs/minhaFotoTemaClaro.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/8efa1554ba.js" crossorigin="anonymous"></script>
 </head>
@@ -125,6 +125,6 @@
                 <li><a href="https://fontawesome.com/icons?d=gallery&m=free">FontAwesome</a></li>
             </div>
         </footer>
-        <script src="meuJs.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
