--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <li><a href="https://deepai.org/machine-learning-model/torch-srgan">Super Resolution (usado para aumentar a resolução do fundo)</a></li>
             </div>
             <div>
-                <a>https://www.canva.com/design/DAGo72wdsbA/UHbvSMnUc8jxtJ8W6LT7qA/edit?utm_content=DAGo72wdsbA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton</a>
+                <a href="https://www.canva.com/design/DAGo72wdsbA/UHbvSMnUc8jxtJ8W6LT7qA/edit?utm_content=DAGo72wdsbA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Atalho para o canva do CriptoCefet</a>
                 <h3>Atribuição dos ícones</h3>
                 <li><a href="https://fontawesome.com/icons?d=gallery&m=free">FontAwesome</a></li>
             </div>
