--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         }
 
         body {
-            background-image: url("/src/imgs/fundo-dark.jpg");
+            background-image: url("fundo-dark.jpg");
             background-repeat: repeat;
             background-size: cover;
             font-family: sans-serif;
@@ -200,7 +200,7 @@
 
 <body>
     <header>
-        <img id="logo" src="/src/imgs/logo.png" alt="Logo CriptoCefet">
+        <img id="logo" src="logo.png" alt="Logo CriptoCefet">
         <h1>CriptoCefet</h1>
     </header>
 
